--- a/src/index.html
+++ b/src/index.html
@@ -3,16 +3,270 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@600&family=Noto+Sans:wght@400;700&family=Oswald&display=swap"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Pierre Falcke</title>
   </head>
-  <body class="grid place-items-center p-8">
-    <h1 class="text-xl font-bold text-emerald-700">Tailwind Template E2022</h1>
-    <p class="text-emerald-500">
-      Powered by teiuashdiuahsst1<a href="https://vitejs.dev/guide">Vite</a>
-    </p>
-    <img src="img/vite.svg" alt="Vite Logo" />
+  <body>
+    <section>
+      <div
+        class="parallaxcontainermedflereelementer flex h-screen flex-col items-center justify-center gap-12 bg-[url('/img/over-out-ilm.jpg')] bg-cover"
+      >
+        <h1 class="font-notoSans font-bold">Uperfekt er perfekt</h1>
+        <p class="paragraf_01 border border-purple-dark p-4">Pierre Falcke.</p>
+        <p class="paragraf_02 border border-purple-dark p-4">
+          Du ved formentlig ikke, hvem han er.
+        </p>
+        <p class="paragraf_03 max-w-sm border border-purple-dark p-4">
+          Men indtil for kort tid siden så du hans værker et par gange om dagen
+          - hver dag, året rundt.
+        </p>
+        <p class="paragraf_04 max-w-sm border border-purple-dark p-4">
+          Pierre Falcke var en af verdens bedst sælgende stock-fotografer, og
+          han solgte over 2 millioner fotos om året.
+        </p>
+        <p class="paragraf_05 max-w-sm border border-purple-dark p-4">
+          Men Pierre kunne ikke drømme om at bruge sine egne fotos - faktisk kan
+          han ikke fordrage sit eget arbejde.
+        </p>
+      </div>
+    </section>
+    <!-- <div
+      class="bg-gradient-to-b from-hvid to-purple-dark bg-no-repeat p-12"
+    ></div> -->
+    <section class="bg-purple-dark">
+      <h2
+        class="glitch py-20 text-center font-oswald text-6xl text-lyseroedDark"
+      >
+        Pierres berømmelse
+      </h2>
+      <div class="mx-auto w-4/5 max-w-md">
+        <h3 class="pb-2 font-inter text-xl font-semibold text-blaa">
+          Opvæksten
+        </h3>
+        <p class="font-notoSans text-hvid">
+          Pierres interesse for foto startede som ung - som 10-årig fik han sin
+          fars gamle Rollei-kamera og begyndte at skyde løs. Det var før den
+          digitale revolution, så alle Pierres lommepenge blev brugt på
+          filmruller og fremkaldelse af film. Pierre fortsatte med at
+          fotografere på film op gennem gymnasietiden.
+        </p>
+      </div>
+      <div class="flex items-center justify-center py-16">
+        <img class="w-52 max-w-7xl" src="/img/kamera.svg" alt="" />
+      </div>
+      <div class="mx-auto w-4/5 max-w-md pb-20">
+        <h3 class="pb-2 font-inter text-xl font-semibold text-groen">
+          Uddannelsen
+        </h3>
+        <p class="font-notoSans text-hvid">
+          Pierre gik over til digital fotografering i starten af 2000'erne, da
+          han begyndte at studere fotografisk kommunikation på DMJX. Her åbnede
+          en ny verden sig: Reklamefotografering i studie, lyssætning, og
+          manipulering af billeder i Photoshop blev hans nye stil.
+        </p>
+      </div>
+      <div class="mx-auto w-3/5 max-w-sm bg-lyseroedLight p-6 text-slate-200">
+        <h4 class="pb-2 text-center">Stock-fotos?</h4>
+        <p class="font-notoSans text-sm">
+          Stock-fotos er billeder, der kan købes fra et foto-website. De bruges
+          af aviser, til markedsføring og som indhold på websites. En licens til
+          at bruge et foto koster typisk mellem 10 og 100 kroner, alt afhængig
+          af, hvad de skal bruges til.
+        </p>
+      </div>
+      <div class="mx-auto w-4/5 max-w-md py-20">
+        <h3 class="pb-2 font-inter text-xl font-semibold text-lyseroedDark">
+          Revolutionen
+        </h3>
+        <p class="font-notoSans text-hvid">
+          På et tidspunkt var stock-fotos-industrien i starten af en revolution:
+          De første online stock-foto-websites begyndte at komme på markedet,
+          men de store, etablerede spillere på markedet holdt lidt igen. Pierre
+          så det for sig... "Om ganske få år er hele branchen digital, og dem
+          der ikke hopper med på den digitale vogn, lukker."
+        </p>
+      </div>
+    </section>
 
+    <!-- <div class="bg-purple-dark"> -->
+    <section class="max-w-full overflow-hidden overflow-y-clip bg-purple-dark">
+      <div class="">
+        <img src="/img/bygning_zoom_glans.svg" class="scrollzoomimg" alt="" />
+      </div>
+    </section>
+    <!-- </div> -->
+
+    <section class="bg-purple-dark pb-20 pt-40 lg:bg-bygning">
+      <div class="mx-auto w-4/5 max-w-md text-hvid">
+        <h3 class="pb-2 font-inter text-xl font-semibold text-lyseroedDark">
+          Karrieren
+        </h3>
+        <p class="pb-8 font-notoSans">
+          Så Pierre gav sig selv en ufordring: at blive landets bedst sælgende
+          stock-fotograf. Pierre lejede et gammelt, billigt erhverslokale i
+          Ishøj industri, fik fløjet billige skuespillere ind fra Polen og
+          Baltikum, og fotograferede 10 timer om dagen.
+        </p>
+      </div>
+    </section>
+    <section class="sticky bg-bygning">
+      <div
+        class="videocontainer sticky top-1/4 flex w-full items-center justify-center"
+      >
+        <video
+          src="/pierre_videoscrub.mp4"
+          muted
+          loop
+          playsinline
+          class="w-2/3 sm:w-3/6"
+          id="videoscrub"
+        ></video>
+        <div class="videoarticle"></div>
+      </div>
+    </section>
+    <section class="bg-bygning py-20 text-hvid">
+      <div class="mx-auto w-4/5 max-w-md">
+        <p class="font-notoSans">
+          Pierres profeti om stock-foto branchen holdt stik.
+          <a class="cursor-text" href="#">Pierre var allerede</a> en af landets
+          bedst sælgende fotografer, før han blev færdig med studiet på DMJX. >
+        </p>
+      </div>
+    </section>
+    <section class="bg-purple-dark pb-20">
+      <div><img class="w-full" src="/img/glitch.jpg" alt="" /></div>
+      <h2
+        class="glitch pt-20 text-center font-oswald text-6xl text-lyseroedDark"
+      >
+        En skillevej
+      </h2>
+      <div class="mx-auto w-4/5 max-w-md py-20">
+        <h3 class="pb-2 font-inter text-xl font-semibold text-groen">
+          Modsvaret
+        </h3>
+        <p class="font-notoSans text-hvid">
+          Pierre gik over til digital fotografering i starten af 2000'erne, da
+          han begyndte at studere fotografisk kommunikation på DMJX. Her åbnede
+          en ny verden sig: Reklamefotografering i studie, lyssætning, og
+          manipulering af billeder i Photoshop blev hans nye stil.
+        </p>
+      </div>
+      <div class="mx-auto w-3/5 max-w-sm bg-lyseroedLight p-6 text-slate-200">
+        <h4 class="pb-2 text-center">Analog-fotografering</h4>
+        <p class="font-notoSans text-sm">
+          Fotografering med gammeldags filmruller. Mange fotografer synes at
+          film-fotografering er mere ægte og har mere “sjæl.” Analog
+          fotografering er langsommmere, hvert enkelt billede koster penge, og
+          man bliver nødt til at overveje motiv og lys grundigere før der
+          skydes.
+        </p>
+        <p class="pt-2 text-sm">
+          Analog fotografering kan gå galt mange steder i processen, men det
+          giver også mulighed for at eksperimentere med “det uperfekte og
+          uforudsigelige i processen.”
+        </p>
+      </div>
+      <div class="mx-auto grid justify-center gap-20 py-20">
+        <img src="/img/x4_01.png" alt="" /><img
+          src="/img/x4_02.png"
+          alt=""
+        /><img src="/img/x4_03.png" alt="" /><img src="/img/x4_04.png" alt="" />
+      </div>
+      <div class="mx-auto w-3/5 max-w-sm bg-lyseroedLight p-6 text-slate-200">
+        <h4 class="pb-2 text-center">Lomo-regler</h4>
+        <ul>
+          <li>Tag kameraet med overalt</li>
+          <li>Brug det på alle tidspunkter - dag og nat</li>
+          <li>
+            Lomografi er ikke en forstyrrelse af dit liv - men en del af det
+          </li>
+          <li>Prøv hofteskuddet!</li>
+          <li>Gå tæt på de objekter, du har et ønske om at lomografere</li>
+        </ul>
+      </div>
+    </section>
+    <section class="bg-purple-dark">
+      <!-- <video src=""></video> -->
+      <h2
+        class="glitch pb-20 text-center font-oswald text-6xl text-lyseroedDark"
+      >
+        En ny begyndelse
+      </h2>
+      <div class="mx-auto w-4/5 max-w-md pb-20">
+        <h3 class="pb-2 font-inter text-xl font-semibold text-groen">
+          Ny hverdag
+        </h3>
+        <p class="font-notoSans text-hvid">
+          Men Pierre er glad for sin beslutning. Indkomsten er lavere nu, men
+          han har stadig lidt penge på kontoen, og studerer nu
+          kunstfotografering på fotoskolen Fatamorgana.
+        </p>
+      </div>
+      <!-- <div><img src="" alt="" /></div> -->
+      <div class="mx-auto w-4/5 max-w-md pb-20">
+        <p class="font-notoSans text-hvid">
+          Han glæder sig over hver dags kunstneriske eksperimenter, og er for
+          første gang i sit liv rigtig stolt af sit arbejde.
+        </p>
+      </div>
+      <!-- <div><img src="" alt="" /></div> -->
+      <div class="mx-auto w-4/5 max-w-md pb-20">
+        <h3 class="pb-2 font-inter text-xl font-semibold text-blaa">
+          Lidt i fem
+        </h3>
+        <p class="font-notoSans text-hvid">
+          Karrieren begynder også så småt at gå den rette vej: Pierre er begyndt
+          at sælge fotokunst på nettet, og har udgivet sin første foto-bog med
+          titlen "Lidt i fem", som er en fotografisk odyssé om at slæbe en
+          brandert hjem i de tidligere morgentimer.
+        </p>
+      </div>
+      <!-- <div><img src="" alt="" /></div> BOG -->
+      <div class="mx-auto w-4/5 max-w-md pb-20">
+        <p class="font-notoSans text-hvid">
+          I forbindelse med udgivelsen af bogen har Pierre en udstilling på vej
+          i det Kongelige Biblioteks fotoudstilling.
+        </p>
+      </div>
+    </section>
+    <section class="pb-40">
+      <div>
+        <!-- INDSÆT GRAFIK SOM BAGGRUNDSBILLEDE -->
+        <p>
+          "Nu kan jeg leve igen. Jeg føler mig frisk. Jeg føler mig fri. Jeg
+          føler mig genfødt."
+        </p>
+        <!-- INDSÆT CAROUSEL MED 3 BILLEDER HER -->
+      </div>
+    </section>
+    <section>
+      <!-- LAVET-AF-SECTION -->
+    </section>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
+
+<!-- 1. Farvede underline til vigtige pointer
+     2. Shadow til infobokse - anderledes på mobil
+     3. Scroll-snap til infobokse
+     4. Vindue til bygning
+     5. Kamera i lyserød
+     6. Opdateret billede til videoscrub
+     7. Skyer/transition til gule billede
+     8. H2'ere ned langs i web?
+     9. Ikke billede fra bog til x4
+     10. Roter + animation til x4
+     11. Stagger til lomo-regler
+     12. Citat oven på video
+     13. Lave infite af timelapse-video
+     14. Slutbillede
+     15. Carrousel til billeder af bogen
+     16. Køb-knap skal designes
+     17. Afslutning - lavet af osv.
+     18. Forside med parallax-scroll -->
