--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@600&family=Noto+Sans:wght@400;700&family=Oswald&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@600&family=Noto+Sans:wght@400;700&family=Oswald&family=Rubik+Dirt&display=swap"
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -115,27 +117,27 @@
         </p>
       </div>
     </section>
-    <section class="sticky bg-bygning">
+    <section class="sticky bg-purple-dark lg:bg-bygning">
       <div
-        class="videocontainer sticky top-1/4 flex w-full items-center justify-center"
+        class="videocontainer sticky top-1/3 mx-auto w-3/4 md:top-1/4 md:w-3/6 lg:w-2/5"
       >
         <video
-          src="/pierre_videoscrub.mp4"
+          src="/kea_pierre.mp4"
           muted
           loop
           playsinline
-          class="w-2/3 sm:w-3/6"
-          id="videoscrub"
+          class="w-full"
+          id="videofil"
         ></video>
-        <div class="videoarticle"></div>
       </div>
+      <div class="videoarticle h-screen"></div>
     </section>
-    <section class="bg-bygning py-20 text-hvid">
+    <section class="bg-purple-dark py-20 text-hvid lg:bg-bygning">
       <div class="mx-auto w-4/5 max-w-md">
         <p class="font-notoSans">
           Pierres profeti om stock-foto branchen holdt stik.
           <a class="cursor-text" href="#">Pierre var allerede</a> en af landets
-          bedst sælgende fotografer, før han blev færdig med studiet på DMJX. >
+          bedst sælgende fotografer, før han blev færdig med studiet på DMJX.
         </p>
       </div>
     </section>
@@ -191,10 +193,41 @@
         </ul>
       </div>
     </section>
+    <section class="sticky bg-purple-dark">
+      <div class="sticky top-1/3 md:top-1/4 lg:top-0">
+        <video
+          muted
+          loop
+          autoplay
+          playsinline
+          class="w-full"
+          src="/pierre_loop.mp4"
+        ></video>
+        <div
+          class="i absolute top-1/4 left-0 right-0 mx-auto ml-auto mr-auto w-5/6 max-w-sm md:max-w-lg lg:max-w-5xl"
+        >
+          <p class="text-md font-rubik text-hvid md:text-3xl lg:text-5xl">
+            " Det interessante ligger i fejlen. Jeg eksperimenterer med udstyr
+            og teknik, og jeg skaber nye visuelle udtryk. <br />
+            <a class="cursor-text" href="#">Det uperfekte er perfekt.</a> "
+          </p>
+        </div>
+      </div>
+
+      <!-- <div class="sticky top-0 mx-auto w-5/6 pb-40">
+        <p class="font-rubik text-sm text-hvid">
+          <span class="">"</span> Det interessante ligger i fejlen. Jeg
+          eksperimenterer med udstyr og teknik, og jeg skaber nye visuelle
+          udtryk. <br />
+          <a class="cursor-text" href="#">Det uperfekte er perfekt.</a>
+          <span class="">"</span>
+        </p>
+      </div> -->
+      <div class="pb-96 lg:pb-48"></div>
+    </section>
     <section class="bg-purple-dark">
-      <!-- <video src=""></video> -->
       <h2
-        class="glitch pb-20 text-center font-oswald text-6xl text-lyseroedDark"
+        class="glitch py-20 text-center font-oswald text-6xl text-lyseroedDark"
       >
         En ny begyndelse
       </h2>
@@ -267,6 +300,7 @@
      13. Lave infite af timelapse-video
      14. Slutbillede
      15. Carrousel til billeder af bogen
-     16. Køb-knap skal designes
+     16. Køb-knap skal designes?
      17. Afslutning - lavet af osv.
-     18. Forside med parallax-scroll -->
+     18. Forside med parallax-scroll 
+     19. Skal carousel være en del af vejstribe? -->
