--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@600&family=Noto+Sans:wght@400;700&family=Oswald&family=Rubik+Dirt&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@600&family=Noto+Sans:wght@400;700&family=Oswald&family=Patrick+Hand&display=swap"
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -16,28 +18,67 @@
   </head>
   <body>
     <section>
-      <div
-        class="parallaxcontainermedflereelementer sticky top-0 flex h-screen flex-col items-center justify-center gap-12 bg-[url('/img/splash.webp')] bg-cover text-hvid"
-      >
-        <h1 class="font-notoSans font-bold">Uperfekt er perfekt</h1>
-        <p class="paragraf_01 border border-purple-dark p-4">Pierre Falcke.</p>
-        <p class="paragraf_02 border border-blaa p-4">
-          Du ved formentlig ikke, hvem han er.
-        </p>
-        <p class="paragraf_03 max-w-sm border border-lyseroed p-4">
-          Men indtil for kort tid siden så du hans værker et par gange om dagen
-          - hver dag, året rundt.
-        </p>
-        <p class="paragraf_04 max-w-sm border border-groen p-4">
-          Pierre Falcke var en af verdens bedst sælgende stock-fotografer, og
-          han solgte over 2 millioner fotos om året.
-        </p>
-        <p class="paragraf_05 max-w-sm border border-purple-dark p-4">
-          Men Pierre kunne ikke drømme om at bruge sine egne fotos - faktisk kan
-          han ikke fordrage sit eget arbejde.
-        </p>
+      <div class="text-hvid">
+        <!-- <div class="sticky top-0 grid place-content-center gap-12 text-center">
+          <img src="/img/splash.webp" alt="" />
+        </div> -->
+        <div
+          class="sticky top-0 flex h-screen w-screen items-center justify-center bg-[url('/img/splash.webp')] bg-cover"
+        >
+          <h1 class="h1_glitch text-center font-notoSans text-6xl font-bold">
+            Uperfekt er perfekt
+          </h1>
+        </div>
+        <div
+          class="flex h-screen snap-y snap-mandatory items-center justify-center"
+        >
+          <p
+            class="paragraf_01 relative max-w-sm snap-center border border-lyseroed p-7 text-3xl"
+          >
+            Pierre Falcke.
+          </p>
+        </div>
+        <div
+          class="flex h-screen snap-y snap-mandatory items-center justify-center"
+        >
+          <p
+            class="paragraf_02 relative max-w-sm snap-center border border-blaa p-7 text-3xl"
+          >
+            Du ved formentlig ikke, hvem han er.
+          </p>
+        </div>
+        <div
+          class="flex h-screen snap-y snap-mandatory items-center justify-center"
+        >
+          <p
+            class="paragraf_03 relative max-w-sm snap-center border border-lyseroed p-7 text-3xl"
+          >
+            Men indtil for kort tid siden så du hans værker et par gange om
+            dagen - hver dag, året rundt.
+          </p>
+        </div>
+        <div
+          class="flex h-screen snap-y snap-mandatory items-center justify-center"
+        >
+          <p
+            class="paragraf_04 relative max-w-sm snap-center border border-groen p-7 text-3xl"
+          >
+            Pierre Falcke var en af verdens bedst sælgende stock-fotografer, og
+            han solgte over 2 millioner fotos om året.
+          </p>
+        </div>
+        <div
+          class="flex h-screen snap-y snap-mandatory items-center justify-center"
+        >
+          <p
+            class="paragraf_05 sticky max-w-sm snap-center border border-blaa p-7 text-3xl"
+          >
+            Men Pierre kunne ikke drømme om at bruge sine egne fotos - faktisk
+            kan han ikke fordrage sit eget arbejde.
+          </p>
+        </div>
       </div>
-      <div class="pb-20"></div>
+      <!-- <div class="pb-20"></div> -->
     </section>
 
     <section class="bg-purple-dark pb-40">
@@ -162,6 +203,7 @@
         </p>
       </div> -->
     </section>
+
     <section class="sticky bg-purple-dark lg:bg-bygning">
       <div
         class="videocontainer sticky top-1/3 mx-auto w-3/4 md:top-1/4 md:w-3/6 lg:w-2/5"
@@ -235,10 +277,10 @@
 
     <section class="bg-purple-dark py-24">
       <div class="grid justify-evenly gap-14 md:flex lg:flex">
-        <div class="roter_01">
+        <div class="roter_01 glow_01">
           <img src="/img/x4_01.png" alt="" />
         </div>
-        <div class="roter_02"><img src="/img/x4_02.png" alt="" /></div>
+        <div class="roter_02 glow_02"><img src="/img/x4_02.png" alt="" /></div>
       </div>
     </section>
 
@@ -296,11 +338,13 @@
     </section>
 
     <section class="bg-purple-dark pb-52">
-      <div class="grid justify-evenly gap-24 md:flex lg:flex">
+      <div class="glow_03 grid justify-evenly gap-24 md:flex lg:flex">
         <div class="roter_01_lille md:roter_01_stor_mere lg:roter_01_mere">
           <img src="/img/x4_04.png" alt="" />
         </div>
-        <div class="roter_02_lille md:roter_02_stor_mere lg:roter_02_mere">
+        <div
+          class="glow_04 roter_02_lille md:roter_02_stor_mere lg:roter_02_mere"
+        >
           <img src="/img/x4_03.png" alt="" />
         </div>
       </div>
@@ -313,19 +357,18 @@
         <div
           class="mx-auto w-3/5 max-w-sm snap-center bg-tekstboks p-7 text-slate-200"
         >
-          <h4 class="pb-2 text-xl">Lomo-regler</h4>
+          <h4 class="pb-4 text-xl">Lomo-regler</h4>
           <ul class="staggeranimation">
-            <li>
-              <a class="cursor-text underline decoration-blaa" href="#"
-                >Tag kameraet med overalt</a
-              >
+            <li class="py-2">1. Tag kameraet med overalt</li>
+            <li class="py-2">2. Brug det på alle tidspunkter - dag og nat</li>
+            <li class="py-2">
+              3. Lomografi er ikke en forstyrrelse af dit liv - men en del af
+              det
             </li>
-            <li>Brug det på alle tidspunkter - dag og nat</li>
-            <li>
-              Lomografi er ikke en forstyrrelse af dit liv - men en del af det
+            <li class="py-2">4. Prøv hofteskuddet!</li>
+            <li class="py-2">
+              5. Gå tæt på de objekter, du har et ønske om at lomografere
             </li>
-            <li>Prøv hofteskuddet!</li>
-            <li>Gå tæt på de objekter, du har et ønske om at lomografere</li>
           </ul>
         </div>
       </div>
@@ -344,7 +387,7 @@
         <div
           class="absolute top-1/4 left-0 right-0 mx-auto ml-auto mr-auto w-5/6 max-w-sm md:max-w-lg lg:max-w-5xl"
         >
-          <p class="text-md font-rubik text-hvid md:text-3xl lg:text-5xl">
+          <p class="text-md font-patrick text-hvid md:text-3xl lg:text-5xl">
             " Det interessante ligger i fejlen. Jeg eksperimenterer med udstyr
             og teknik, og jeg skaber nye visuelle udtryk. <br />
             <a class="cursor-text underline decoration-groen" href="#">Det</a>
@@ -359,22 +402,13 @@
           </p>
         </div>
       </div>
-
-      <!-- <div class="sticky top-0 mx-auto w-5/6 pb-40">
-        <p class="font-rubik text-sm text-hvid">
-          <span class="">"</span> Det interessante ligger i fejlen. Jeg
-          eksperimenterer med udstyr og teknik, og jeg skaber nye visuelle
-          udtryk. <br />
-          <a class="cursor-text" href="#">Det uperfekte er perfekt.</a>
-          <span class="">"</span>
-        </p>
-      </div> -->
       <div class="pb-96 lg:pb-48"></div>
     </section>
+
     <section class="bg-purple-dark">
       <div class="lg:flex">
         <h2
-          class="glitch lg:halvfems py-20 text-center font-oswald text-6xl text-lyseroed lg:ml-72 lg:py-4 lg:pl-24"
+          class="glitch lg:halvfems py-20 text-center font-oswald text-6xl text-lyseroed lg:ml-72 lg:py-14 lg:pl-24"
         >
           En ny begyndelse
         </h2>
@@ -390,18 +424,26 @@
           Indkomsten er lavere nu, men han har stadig lidt penge på kontoen, og
           studerer nu kunstfotografering på fotoskolen Fatamorgana.
         </p>
-      </div>
-      <!-- <div><img src="" alt="" /></div> -->
-      <div class="mx-auto w-4/5 max-w-md pb-20">
-        <p class="font-notoSans text-hvid">
+        <p class="pt-2 font-notoSans text-hvid">
           Han glæder sig over hver dags kunstneriske eksperimenter, og er for
           første gang i sit liv rigtig stolt af sit arbejde.
         </p>
       </div>
-      <!-- <div><img src="" alt="" /></div> -->
+    </section>
+
+    <section class="bg-purple-dark pb-56 pt-20 lg:pt-40">
+      <div class="grid justify-evenly gap-14 md:flex lg:flex">
+        <div class="roter_01 glow_01">
+          <img src="/img/x2_01.webp" alt="" />
+        </div>
+        <div class="roter_02 glow_02"><img src="/img/x2_02.webp" alt="" /></div>
+      </div>
+    </section>
+
+    <section class="bg-purple-dark">
       <div class="mx-auto w-4/5 max-w-md pb-20">
         <h3 class="pb-2 font-inter text-xl font-semibold text-lyseroed">
-          Lidt i fem
+          Fremtiden
         </h3>
         <p class="font-notoSans text-hvid">
           Karrieren begynder også så småt at gå den rette vej: Pierre er begyndt
@@ -412,50 +454,63 @@
           som er en fotografisk odyssé om at slæbe en brandert hjem i de
           tidligere morgentimer.
         </p>
-      </div>
-      <!-- <div><img src="" alt="" /></div> BOG -->
-      <div class="mx-auto w-4/5 max-w-md pb-20">
-        <p class="font-notoSans text-hvid">
+        <p class="pt-2 font-notoSans text-hvid">
           I forbindelse med udgivelsen af bogen har Pierre en udstilling på vej
           i det Kongelige Biblioteks fotoudstilling.
         </p>
       </div>
     </section>
-    <section class="pb-40">
+
+    <section class="max-w-full overflow-hidden overflow-y-clip bg-purple-dark">
       <div>
-        <!-- INDSÆT GRAFIK SOM BAGGRUNDSBILLEDE -->
-        <p>
-          "Nu kan jeg leve igen. Jeg føler mig frisk. Jeg føler mig fri. Jeg
-          føler mig genfødt."
-        </p>
-        <!-- INDSÆT CAROUSEL MED 3 BILLEDER HER -->
+        <img
+          src="/img/vej_kort_citat9.svg"
+          class="scrollzoomimg_02 w-full"
+          alt=""
+        />
+      </div>
+      <div class="pb-52">
+        <p class="test"></p>
       </div>
     </section>
-    <section>
-      <!-- LAVET-AF-SECTION -->
+
+    <!-- <section class="bg-gradient-to-b from-vej to-purple-dark py-20"></section> -->
+
+    <section
+      class="h-screen snap-y snap-mandatory bg-gradient-to-b from-vej to-purple-dark"
+    >
+      <div class="snap-center">
+        <div class="flex items-center justify-center pb-10 pt-20">
+          <h4 class="glitch text-center font-oswald text-6xl text-lyseroed">
+            Credit
+          </h4>
+        </div>
+        <div class="mx-auto w-4/5 max-w-md font-notoSans text-hvid">
+          <p class="pb-10">
+            Denne webfeature er lavet ud fra Pierre Falckes sande historie.
+            Visse ting er blevet redigeret, men kun for at passe bedre ind i
+            fortællingen - betydningen er ikke ændret.
+          </p>
+          <p class="pb-10">
+            <span class="text-blaa">Kode</span> <br />
+            Jakob Semajer-Garic
+          </p>
+          <p class="pb-10">
+            <span class="text-lyseroed">Grafik</span> <br />
+            Andrea Seneberg Christensen <br />
+            & Mathilde Skriver Eriksen
+          </p>
+          <p class="pb-10">
+            <span class="text-groen">Foto</span> <br />
+            Pierre Falcke
+          </p>
+        </div>
+        <hr class="border-blaa" />
+      </div>
     </section>
+    <div
+      class="progress-bar fixed left-0 top-0 right-0 h-4 w-full origin-top-left bg-gradient-to-l from-blaa via-groen to-lyseroed"
+    ></div>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
-
-<!-- 1. Farvede underline til vigtige pointer ====
-     2. Shadow til infobokse =====
-     3. Scroll-snap til infobokse =======
-     4. Vindue til bygning =====
-     5. Kamera i lyserød ======
-     6. Opdateret billede til videoscrub =====
-     7. Skyer/transition til gule billede ======
-     8. H2'ere ned langs i web? ======
-     9. Ikke billede fra bog til x4 =====
-     10. Roter + animation til x4
-     11. Stagger til lomo-regler =======
-     12. Citat oven på video ======
-     13. Lave infite af timelapse-video ======
-     14. Slutbillede
-     15. Carrousel til billeder af bogen
-     16. Køb-knap skal designes?
-     17. Afslutning - lavet af osv. - skal sættes i kode
-     18. Forside med parallax-scroll - evt. snap fade
-     19. Skal carousel være en del af vejstribe?
-     20. x4 med tekst imellem på mobil
-     21. Timeline -->
