--- a/index.html
+++ b/index.html
@@ -16,19 +16,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pierre Falcke</title>
     <script type="module" crossorigin src="./assets/main.b4a595d0.js"></script>
-    <link rel="stylesheet" href="./assets/index.3330cdf5.css">
+    <link rel="stylesheet" href="./assets/index.f4ff221c.css">
   </head>
   <body>
     <section>
       <div class="text-hvid">
-        <!-- <div class="sticky top-0 grid place-content-center gap-12 text-center">
-          <img src="/img/splash.webp" alt="" />
-        </div> -->
         <div
           class="sticky top-0 flex h-screen w-screen items-center justify-center bg-[url('/img/splash.webp')] bg-cover"
         >
           <h1 class="h1_glitch text-center font-notoSans text-6xl font-bold">
-            Uperfekt er perfekt
+            Uperfekt er perfekt <br />
+            <span class="text-sm">En fortælling om Pierre Falcke</span>
           </h1>
         </div>
         <div
@@ -80,7 +78,6 @@
           </p>
         </div>
       </div>
-      <!-- <div class="pb-20"></div> -->
     </section>
 
     <section class="bg-purple-dark pb-40">
@@ -163,13 +160,11 @@
       </div>
     </section>
 
-    <!-- <div class="bg-purple-dark"> -->
     <section class="max-w-full overflow-hidden overflow-y-clip bg-purple-dark">
       <div class="">
         <img src="./img/bygning_center6.svg" class="scrollzoomimg" alt="" />
       </div>
     </section>
-    <!-- </div> -->
 
     <section class="bg-purple-dark pb-20 pt-20 lg:bg-bygning">
       <div class="mx-auto w-4/5 max-w-md text-hvid">
@@ -258,7 +253,7 @@
     <section class="tekstboks_snap snap-y snap-mandatory bg-purple-dark pb-28">
       <div class="tekstboks_bgpurple">
         <div
-          class="mx-auto w-3/5 max-w-sm snap-center bg-tekstboks p-7 text-slate-200"
+          class="mx-auto w-3/5 max-w-sm snap-center bg-tekstboks p-7 text-hvid"
         >
           <h4 class="pb-2 text-lg">Analog-fotografering</h4>
           <p class="font-notoSans text-sm">
@@ -306,7 +301,7 @@
     <section class="tekstboks_snap snap-y snap-mandatory bg-purple-dark pb-28">
       <div class="tekstboks_bgpurple">
         <div
-          class="mx-auto w-3/5 max-w-sm snap-center bg-tekstboks p-7 text-slate-200"
+          class="mx-auto w-3/5 max-w-sm snap-center bg-tekstboks p-7 text-hvid"
         >
           <h4 class="pb-2 text-lg">Lomografi</h4>
           <p class="font-notoSans text-sm">
@@ -357,7 +352,7 @@
     >
       <div class="tekstboks_bgpurple">
         <div
-          class="mx-auto w-3/5 max-w-sm snap-center bg-tekstboks p-7 text-slate-200"
+          class="mx-auto w-3/5 max-w-sm snap-center bg-tekstboks p-7 text-hvid"
         >
           <h4 class="pb-4 text-xl">Lomo-regler</h4>
           <ul class="staggeranimation">
@@ -475,8 +470,6 @@
         <p class="test"></p>
       </div>
     </section>
-
-    <!-- <section class="bg-gradient-to-b from-vej to-purple-dark py-20"></section> -->
 
     <section
       class="h-screen snap-y snap-mandatory bg-gradient-to-b from-vej to-purple-dark"
